# os-patches

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  70im-config_launch  AUTHORS  BUGS  CHANGELOG  CMakeLists.txt  COPYING  COPYING.LIB  ChangeLog  ChangeLog.README  ChangeLog.pre-2-23  ChangeLog.pre-2.27  Dist.vala  Dockerfile  HACKING.md  INSTALL  KDE-BUGS-TODO  MAINTAINERS  MANIFEST.in  MERGE-REVIEW  Makefile  Makefile.am  Makefile.am.coverage  Makefile.in  Makefile.util.am  Makefile.util.def  Makefile.utilgcry.def  NEWS  PKG-INFO  README  README.md  TODO  VERSION  accounts.conf.in  aclocal.m4  autogen.sh  (+95 more)
accounts-service/: com.endlessm.ParentalControls.AccountInfo.xml  com.endlessm.ParentalControls.AppFilter.xml  com.endlessm.ParentalControls.SessionLimits.xml  com.endlessm.ParentalControls.policy.in  com.endlessm.ParentalControls.rules  com.endlessm.ParentalControls.rules.in  meson.build
applet/: Makefile.am  Makefile.in  bluetooth-applet.c  bluetooth-applet.h
champlain/: champlain-adjustment.c  champlain-coordinate.c  champlain-custom-marker.c  champlain-enum-types.c.in  champlain-enum-types.h.in  champlain-error-tile-renderer.c  champlain-file-cache.c  champlain-file-tile-source.c  champlain-image-renderer.c  champlain-kinetic-scroll-view.c  champlain-label.c  champlain-layer.c  champlain-license.c  champlain-map-source-chain.c  champlain-map-source-desc.c  champlain-map-source-factory.c  champlain-map-source.c  champlain-marker-layer.c  champlain-marker.c  champlain-memory-cache.c  champlain-memphis-renderer.c  champlain-memphis-renderer.h  champlain-network-bbox-tile-source.c  champlain-network-tile-source.c  champlain-path-layer.c  champlain-point.c  champlain-private.h  champlain-renderer.c  champlain-renderer.h  champlain-scale.c  champlain-tile-cache.c  champlain-tile-source.c  champlain-tile.c  champlain-version.h.in  champlain-view.c  champlain-viewport.c  champlain.h  meson.build
champlain-gtk/: gtk-champlain-embed.c  meson.build
common/: Makefile.am  Makefile.in  com.canonical.indicator.messages.application.xml  com.canonical.indicator.messages.service.xml  flatpak-transaction-private.h  flatpak-version-macros.h
data/: 01_auto.conf  02_cjkv.conf  20_ibus.rc  21_ibus.rc  22_fcitx.rc  24_uim.conf  24_uim.rc  25_hime.conf  25_hime.rc  26_gcin.conf  26_gcin.rc  30_maliit.conf  50-com.canonical.indicator.sound.AccountsService.pkla  50unattended-upgrades.Ubuntu  80-iio-sensor-proxy.rules  80_xsunpinyin.rc  CMakeLists.txt  LanguageSelector.ui  Makefile.am  Makefile.in  check-language-support.1  cloud-providers-dbus.xml  cloudprovider-dbus.xml  cloudprovidermanager-dbus.xml  com.canonical.indicator.bluetooth  com.canonical.indicator.bluetooth.gschema.xml.in  com.canonical.indicator.datetime  com.canonical.indicator.datetime.gschema.xml  com.canonical.indicator.keyboard.gschema.xml  com.canonical.indicator.messages  com.canonical.indicator.messages.gschema.xml  com.canonical.indicator.session  com.canonical.indicator.session.gschema.xml.in  com.canonical.indicator.sound  com.canonical.indicator.sound.AccountsService.policy  com.canonical.indicator.sound.AccountsService.xml  com.canonical.indicator.sound.gschema.xml  com.ubuntu.SoftwareProperties.gschema.xml  com.ubuntu.softwareproperties.policy.in  geoclue.5.in  (+52 more)
demo/: Makefile.am  Makefile.in  agent.c  gclue-service-agent.c  gclue-service-agent.h  geoclue-demo-agent.desktop.in.in  geoclue-where-am-i.desktop.in.in  install-file.py  meson.build  where-am-i.c
demos/: animated-marker.c  create-destroy-test.c  keyboard-mapping.py  launcher-gtk.c  launcher-gtk.py  launcher-vala.vala  launcher.c  launcher.js  local-rendering.c  mapbox.py  markers-vala.vala  markers.c  markers.h  meson.build  minimal-gtk.c  minimal.c  minimal.py  polygons.c  polygons.py  url-marker.c
doc/: Makefile.in  bash.1  bashref.texi  defsincdate  gpgme.info  gpgme.info-1  gpgme.info-2  handy-docs.xml  libcloudproviders-docs.sgml  meson.build  rbash.1
docs/: Makefile.am  Makefile.in  development.txt  geoclue-docs.xml  grub-dev.info  grub.info  grub.info-1  grub.info-2  grub.texi  index.html  layouts.html  meson.build  plymouth-set-default-theme.xml  plymouth.xml  plymouth1.xml  plymouthd.xml  stamp-1  stamp-vti  usage.html  version-dev.texi  version.texi
example/: Makefile.am  menus.c  messagedialog.c
gucharmap/: Makefile.am  Makefile.in  download-unicode-files.sh  gen-guch-unicode-tables.pl  gucharmap-block-chapters-model.c  gucharmap-block-codepoint-list.c  gucharmap-chapters-model.c  gucharmap-chapters-model.h  gucharmap-chapters-view.c  gucharmap-charmap.c  gucharmap-charmap.h  gucharmap-chartable-accessible.c  gucharmap-chartable-cell-accessible.c  gucharmap-chartable.c  gucharmap-chartable.h  gucharmap-menus.ui  gucharmap-mini-fontsel.h  gucharmap-private.h  gucharmap-script-chapters-model.c  gucharmap-script-codepoint-list.c  gucharmap-search-dialog.c  gucharmap-settings.c  gucharmap-settings.h  gucharmap-type-builtins.c.template  gucharmap-unicode-info.c  gucharmap-unicode-info.h  gucharmap-window.c  gucharmap-window.h  gucharmap.gresource.xml.in  gucharmap.h  gucharmap.h.in  main.c  org.gnome.Charmap.gschema.xml  unicode-blocks.h  unicode-categories.h  unicode-names.h  unicode-nameslist.h  unicode-scripts.h  unicode-versions.h
help/: ChangeLog  LINGUAS  Makefile.am  Makefile.in  meson.build
icons/: Makefile.am  Makefile.in  meson.build
interface/: create-unified-xml.py  fi.w1.wpa_supplicant1.xml  meson.build  net.hadess.SensorProxy.xml  org.freedesktop.GeoClue2.Client.xml
lib/: Makefile.am  Makefile.in  bluetooth-agent.c  bluetooth-agent.h  bluetooth-chooser-button.c  bluetooth-chooser-button.h  bluetooth-chooser-combo.c  bluetooth-chooser-combo.h  bluetooth-chooser-private.h  bluetooth-chooser.c  bluetooth-chooser.h  bluetooth-client-glue.c  bluetooth-client-glue.h  bluetooth-client-private.h  bluetooth-client.c  bluetooth-client.h  bluetooth-client.xml  bluetooth-enums.h  bluetooth-fdo-glue.c  bluetooth-fdo-glue.h  bluetooth-fdo.xml  bluetooth-filter-widget.c  bluetooth-pairing-dialog.c  (+49 more)
(+9429 files in other folders)
